updated about section columns, cleaned up google maps for test

--- a/CSS/main3.css
+++ b/CSS/main3.css
@@ -57,6 +57,11 @@ a.anchor {
   padding-bottom: 10px;
 }
 
+.trainer {
+  padding-top:10px;
+  padding-bottom:10px;
+}
+
 .downarrow {
   display:block;
   max-width:25px;
