--- a/CSS/main3.css
+++ b/CSS/main3.css
@@ -224,6 +224,34 @@ body {
     margin-right: 10px;
   }*/
 
+/* ACCORDIAN TESTIMONIALS STYLING */
+/* Styling the button */
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 10px;
+    text-align: center;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.4s ease-out;
+    display: none;
+}
+
 #trainercontact {
   padding-top: 15px;
 }
