--- a/CSS/main3.css
+++ b/CSS/main3.css
@@ -226,7 +226,16 @@ body {
 
 /* ACCORDIAN TESTIMONIALS STYLING */
 /* Styling the button */
+.testsec { 
+  width: 32%;
+}
+
+.testpic {
+  max-width: 200px;
+}
 button.accordion {
+    min-width: 350px;
+    height: 363px;
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -244,12 +253,12 @@ button.accordion.active, button.accordion:hover {
 
 /* Style the accordion panel. Note: hidden by default */
 div.panel {
+    min-width: 350px;
     padding: 0 18px;
     background-color: white;
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.4s ease-out;
-    display: none;
 }
 
 #trainercontact {
